#==================================================================================================
#
#  CMakeLists for chapter "Templates"
#
#  Copyright (C) 2015-2024 Klaus Iglberger - All Rights Reserved
#
#  This file is part of the C++ training by Klaus Iglberger. The file may only be used in the
#  context of the C++ training or with explicit agreement by Klaus Iglberger.
#
#==================================================================================================

cmake_minimum_required(VERSION 3.8 FATAL_ERROR)

add_subdirectory(Class_Templates)
add_subdirectory(Concepts)
add_subdirectory(Function_Templates)
add_subdirectory(Variadic_Templates)
