#==================================================================================================
#
#  CMakeLists for chapter "C++ Software Design"
#
#  Copyright (C) 2015-2024 Klaus Iglberger - All Rights Reserved
#
#  This file is part of the C++ training by Klaus Iglberger. The file may only be used in the
#  context of the C++ training or with explicit agreement by Klaus Iglberger.
#
#==================================================================================================

cmake_minimum_required(VERSION 3.8 FATAL_ERROR)

add_subdirectory(Bridge)
add_subdirectory(Command)
add_subdirectory(External_Polymorphism)
add_subdirectory(Motivation)
add_subdirectory(Prototype)
add_subdirectory(Strategy)
add_subdirectory(Type_Erasure)
add_subdirectory(Visitor)
